# json-ui

./: .gitignore  README.md  pyproject.toml
examples/: config.json  example.py
json_ui/: app.py  auth.py
json_ui/templates/: index.html
