[tool.poetry]
name = "json-ui"
version = "0.1.0"
description = ""
authors = ["idatsy <stefan@ranvier.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-httpauth = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
